          Shahaf).
- TW-1651 Provide opt-out of filter parser's id treatment (thanks to Daniel
          Shahaf).
- TW-1652 task rm misparsed (thanks to Daniel Shahaf).
- TW-1653 info report regression; shouldn't be context sensitive (thanks to
          David Patrick).
- TW-1655 Inform "No changes made." when quitting early due to signal (thanks
          to Daniel Shahaf).
- TW-1660 Disabled sorting option (thanks to David Patrick).
- TW-1664 Notify of waiting→pending promotion (thanks to Daniel Shahaf).
- TW-1666 import should reject invalid data (thanks to Daniel Shahaf).
- TW-1670 Reversed ranges are parsed as a mathematician would expect (thanks to
          Daniel Shahaf).
- TW-1671 task add: segfault with foo-bar:1 (thanks to Daniel Shahaf).
- TW-1675 project.not:something doesn't exclude project:something.subprojects
          (thanks to Ander).
- TW-1678 segfault in ~ViewTask() (thanks to Daniel Shahaf).
- TW-1683 Dom reference for project not properly evaluated (thanks to Tomas
          Babej).
- TW-1684 make no-date > has-date for all date attributes (thanks to David
          Patrick).
- TW-1687 task add due:som appears to be interpreted as 'someday' (thanks to
          Alan Young).
- TW-1688 task fails to import (thanks to Rainer Müller).
- TW-1692 42//' segfaults (thanks to Daniel Shahaf).
- Prevent potential task duplication during import for non-pending tasks.
- Show the active context in "context list", if any is active.
- Fix "task edit" dropping annotation text after newlines.
- Removed obsolete script 'context'.
- Fix "project" verbosity info not showing without "footnote" being manually
  enabled.
- Internal plumbing:  Use variadic templates for format(), reducing code bloat
  and enabling more flexible use of the function.
- Enable "task sync" support by default.  "cmake -DENABLE_SYNC=OFF" allows
  disabling it and building Taskwarrior without libgnutls available.