@@ -136,6 +136,7 @@
           David Patrick).
 - TW-1655 Inform "No changes made." when quitting early due to signal (thanks
           to Daniel Shahaf).
+- TW-1656 Implicitly parenthesize argv filter (thanks to Daniel Shahaf).
 - TW-1660 Disabled sorting option (thanks to David Patrick).
 - TW-1664 Notify of waiting→pending promotion (thanks to Daniel Shahaf).
 - TW-1666 import should reject invalid data (thanks to Daniel Shahaf).
